--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
          "naorobot"
       ],
     
-   "logo":    "kissme",  
+   "logo":    "https://telegra.ph/file/d7eff56f48fcaf2cea0f7.jpg",  
    "repository": "https://github.com/thanosuser/ULTRON",
    "addons": [
           {
